--- a/src/pages/Biology/style.css
+++ b/src/pages/Biology/style.css
@@ -177,7 +177,7 @@
 
     #bio-content-back-upper {
         top: -3%;
-        height: 79%;
+        height: 78%;
     }
 
     #biology-cover-section-subtitle {
@@ -206,10 +206,10 @@
     }
 
     #bio-back-svg-4 {
-        width: 4.938rem;
-        height: 4.938rem;
+        width: 7.5rem;
+        height: 7.5rem;
         right: 0.5rem;
-        bottom: 28%;
+        bottom: 20%;
         top: auto;
     }
 
@@ -269,15 +269,15 @@
 
     #bio-back-svg-3 {
         top: 3%;
-        height: 22.438rem;
+        height: 19.2rem;
         right: 0;
     }
 
     #bio-back-svg-4 {
-        width: 6.875rem;
-        height: 6.875rem;
+        width: 13.266rem;
+        height: 13.266rem;
         right: 0.5rem;
-        bottom: 14%;
+        bottom: 8%;
         top: auto;
     }
 
@@ -312,7 +312,7 @@
     }
 
     #bio-content-back-upper {
-        top: -3%;
+        top: -2%;
         height: 87%;
     }
 
@@ -342,8 +342,8 @@
     }
 
     #bio-back-svg-4 {
-        width: 9.625rem;
-        height: 9.625rem;
+        width: 17.25rem;
+        height: 17.25rem;
         right: 0.5rem;
         bottom: 4%;
         top: auto;
@@ -767,10 +767,10 @@
     }
 
     #bio-back-svg-4 {
-        width: 6.875rem;
-        height: 6.875rem;
+        width: 10.205rem;
+        height: 10.205rem;
         right: 0.5rem;
-        bottom: 14%;
+        bottom: 10%;
         top: auto;
     }
 
